...
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="4dp"
                        app:icon="@drawable/play" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/newGameShow"
                        style="@style/CustomButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_game"
                        app:icon="@drawable/more" />

...

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/startBeginner"
                                    style="@style/CustomButtonFlat"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="start|center_vertical"
                                    android:paddingHorizontal="18dp"
                                    android:text="@string/beginner" />
...
