...
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:onClick="backClicked"
                android:padding="8dp"
                android:text="@string/back"
                android:translationZ="99dp"
                app:icon="@drawable/back_arrow"
                app:layout_constraintBottom_toBottomOf="@id/gallery_bottom_bar_constraint_layout"
                app:layout_constraintLeft_toLeftOf="@id/gallery_bottom_bar_constraint_layout" />

            <com.google.android.material.button.MaterialButton
...
